--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+body {
+  font-family: 'Work Sans', sans-serif;
+  padding: 0;
+  margin: 0;
+}
